# tanc

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  dev.sh  qemu.sh  test.sh
.github/: renovate.json
.github/workflows/: perf.yml  pr.yml
design/: list.excalidraw  slist.excalidraw
docs/: index.html  index.md
docs/.vitepress/: config.mts
docs/guide/: introduction.md  quick-start.md
docs/lib/: list.md  slist.md
hac_sum/: CMakeLists.txt  sum.c  sum.h
lib/common/: CMakeLists.txt  common.h
lib/list/: CMakeLists.txt  list.c  list.h  list_test.c
lib/macro/: CMakeLists.txt  macro.h
lib/print/: CMakeLists.txt  print.c  print.h  print_test.c
lib/slist/: CMakeLists.txt  README.md  slist.c  slist.h  slist_test.c
lib/sum/: CMakeLists.txt
lib/utest/: CMakeLists.txt  utest.c  utest.h
src/: CMakeLists.txt  sum.c
tanc_sum/: CMakeLists.txt
test/: CMakeLists.txt  test.c
