SET(LIB_HEADER sum.h)
SET(LIB_SRC sum.c)
SET(LIB_NAME hac_sum)

ADD_LIBRARY(${LIB_NAME} SHARED ${LIB_SRC})
ADD_LIBRARY(${LIB_NAME}_static STATIC ${LIB_SRC})

SET_TARGET_PROPERTIES(${LIB_NAME}_static PROPERTIES OUTPUT_NAME "sum")
SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES OUTPUT_NAME "sum")
SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES VERSION ${LIBRARY_VERSION}) 

INSTALL(
    FILES ${LIB_HEADER}
    DESTINATION ${LIBRARY_HEADER_DEST}
    COMPONENT ${LIB_NAME}
)
INSTALL(
    TARGETS ${LIB_NAME} ${LIB_NAME}_static 
    LIBRARY DESTINATION ${LIBRARY_DEST} 
    ARCHIVE DESTINATION ${LIBRARY_DEST}
    COMPONENT ${LIB_NAME}
)
