cmake_minimum_required(VERSION 3.10)

SET(LIB_SRC sum.c)
SET(LIBRARY_OUTPUT_PATH ../lib)

ADD_LIBRARY(sum SHARED ${LIB_SRC})
ADD_LIBRARY(sum_static STATIC ${LIB_SRC})

SET_TARGET_PROPERTIES(sum_static PROPERTIES OUTPUT_NAME "sum")
SET_TARGET_PROPERTIES(sum PROPERTIES VERSION 1.0.0) 

INSTALL(TARGETS sum sum_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES sum.h DESTINATION include/sum)
