SET(LIB_NAME list)
SET(LIB_HEADER list.h)
SET(LIB_TEST_BIN list_test)

ADD_LIBRARY(${LIB_NAME} INTERFACE)

INSTALL(
    FILES ${LIB_HEADER}
    DESTINATION ${LIBRARY_HEADER_DEST}
    COMPONENT ${LIB_NAME}
)

INSTALL(
    FILES ${LIB_HEADER}
    DESTINATION ${LIBRARY_HEADER_DEST}
    COMPONENT utest
)

if($ENV{TEST_RUN})
    INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)
    LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)
    ADD_EXECUTABLE(${LIB_TEST_BIN} list_test.c)
    TARGET_COMPILE_DEFINITIONS(${LIB_TEST_BIN} PRIVATE TANC_UT_RUN=1)
    TARGET_LINK_LIBRARIES(${LIB_TEST_BIN} PRIVATE utest)
    ADD_DEPENDENCIES(list_test utest) 
endif()
