SET(LIB_NAME list)
SET(LIB_HEADER list.h)
SET(LIB_SRC list.c)
SET(LIB_TEST_BIN list_test)

ADD_LIBRARY(${LIB_NAME} SHARED ${LIB_SRC})
ADD_LIBRARY(${LIB_NAME}_static STATIC ${LIB_SRC})

SET_TARGET_PROPERTIES(${LIB_NAME}_static PROPERTIES OUTPUT_NAME ${LIB_NAME})
SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES OUTPUT_NAME ${LIB_NAME})
SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES VERSION ${LIBRARY_VERSION}) 

INSTALL_HEADER("utest")
INSTALL_LIB("utest")

if($ENV{TEST_RUN})
    INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)
    LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)
    ADD_EXECUTABLE(${LIB_TEST_BIN} ${LIB_SRC})
    TARGET_COMPILE_DEFINITIONS(${LIB_TEST_BIN} PRIVATE TANC_UT_ON=1)
    TARGET_LINK_LIBRARIES(${LIB_TEST_BIN} PRIVATE utest_static)
    ADD_DEPENDENCIES(${LIB_TEST_BIN} utest_static) 
endif()
