SET(LIB_NAME list)
SET(LIB_HEADER list.h)
SET(LIB_SRC list.c)
SET(LIB_TEST_SRC list_test.c)
SET(LIB_TEST_BIN list_test)

ADD_LIBRARY(${LIB_NAME} SHARED ${LIB_SRC})
ADD_LIBRARY(${LIB_NAME}_static STATIC ${LIB_SRC})

SET_LIB_TARGET()
INSTALL_HEADER("${LIB_NAME};utest")
INSTALL_LIB("${LIB_NAME};utest")

UT_RUN()
