SET(LIB_NAME print)
SET(LIB_HEADER print.h)
SET(LIB_SRC print.c)
SET(LIB_TEST_SRC print_test.c)
SET(LIB_TEST_BIN print_test)

ADD_LIBRARY(${LIB_NAME} SHARED ${LIB_SRC})
ADD_LIBRARY(${LIB_NAME}_static STATIC ${LIB_SRC})

SET_LIB_TARGET()
INSTALL_HEADER("${LIB_NAME};utest")
INSTALL_LIB("${LIB_NAME};utest")

UT_RUN()
