SET(LIB_HEADER utest.h)
SET(LIB_SRC utest.c)
SET(LIB_NAME utest)

ADD_LIBRARY(${LIB_NAME} SHARED ${LIB_SRC})
ADD_LIBRARY(${LIB_NAME}_static STATIC ${LIB_SRC})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)

SET_TARGET_PROPERTIES(${LIB_NAME}_static PROPERTIES OUTPUT_NAME ${LIB_NAME})
SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES OUTPUT_NAME ${LIB_NAME})
SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES VERSION ${LIBRARY_VERSION}) 

if (MSVC)
    TARGET_COMPILE_DEFINITIONS(${LIB_NAME} PRIVATE "UTEST_EXPORTS")
    SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS ON)
endif()

INSTALL(
    FILES ${LIB_HEADER}
    DESTINATION ${LIBRARY_HEADER_DEST}
    COMPONENT ${LIB_NAME}
)
INSTALL(
    TARGETS ${LIB_NAME} ${LIB_NAME}_static OPTIONAL
    LIBRARY DESTINATION ${LIBRARY_DEST} COMPONENT ${LIB_NAME}
    ARCHIVE DESTINATION ${LIBRARY_DEST} COMPONENT ${LIB_NAME}
)
