SET(LIB_HEADER utest.h)
SET(LIB_SRC utest.c)
SET(LIB_NAME utest)

ADD_LIBRARY(${LIB_NAME} SHARED ${LIB_SRC})
ADD_LIBRARY(${LIB_NAME}_static STATIC ${LIB_SRC})

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)
TARGET_LINK_LIBRARIES(${LIB_NAME} PUBLIC list print)

SET_LIB_TARGET()

INSTALL_HEADER("utest")
INSTALL_LIB("utest")
